# Simple-Wgpu-App

./: .gitignore  Cargo.toml
gestalt_content/: Cargo.toml
src/: app.rs  camera.rs  core.rs  input.rs  lib.rs  main.rs  renderer.rs
src/data/: shader.wgsl
src/rendering/: camera.rs  mod.rs  model.rs  pipeline.rs  renderer.rs  scene.rs
