[package]
name = "Gestalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[dependencies]
winit = "0.28.2"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
legion = "*"
pollster = "0.3.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"